added support for letters with group of texts

--- a/evt-viewer/app/styles/_interpretativeEdition.scss
+++ b/evt-viewer/app/styles/_interpretativeEdition.scss
@@ -306,7 +306,7 @@
 		padding: 0px;
 	}
 
-	.del {
+/* 	.del {
 		&:before {
 			content: "[[";
 
@@ -315,7 +315,7 @@
 		&:after {
 			content: "]]";
 		}
-	}
+	} */
 
 	.add {
 		&:before {
