--- a/evt-viewer/app/styles/_quote.scss
+++ b/evt-viewer/app/styles/_quote.scss
@@ -54,6 +54,19 @@
 evt-quote span.quote {
    display: inline !important;
 }
-span.quote {
+/* span.quote {
    display: none !important;
+} */
+
+span.cit>span.quote {
+    font-style: italic;
+
+    &::before {
+        content: '«';
+        font-weight: normal;
+    }
+
+    &::after {
+        content: '»';
+    }
 }
