--- a/evt-viewer/app/styles/main.scss
+++ b/evt-viewer/app/styles/main.scss
@@ -572,7 +572,7 @@ pre {
         margin-top: 14px;
     }
 
-    &-blockLabel,
+    // &-blockLabel,
     &-inlineLabel {
         font-variant: small-caps;
         color: #666;
@@ -590,6 +590,21 @@ pre {
         +.p {
             display: inline;
         }
+    }
+
+    &-list {
+        list-style-type: circle;
+        padding-left: 1.5em; /* Adds space for bullets */
+        margin: 0.5em 0;
+    }
+
+    &-listItem {
+        border-bottom: 1px solid #ddd;
+        margin-bottom: auto;
+    }
+
+    &-listItem:last-child {
+        border-bottom: none;
     }
 }
 
