parsing project info same as letter one
+ no more msdesc button
+ filedesc function
+ respdesc parsing

--- a/evt-viewer/app/styles/_box.scss
+++ b/evt-viewer/app/styles/_box.scss
@@ -40,7 +40,7 @@
     .box-top-box, .box-bottom-box{
         background: #fff;
         text-align: left;
-        font-size: 90%;
+        //font-size: 90%;
         margin-top: 42px;
         margin-bottom: 42px;
         display: none;
