--- a/evt-viewer/app/styles/_tei.scss
+++ b/evt-viewer/app/styles/_tei.scss
@@ -566,9 +566,9 @@ div.div {
 
 
 	//TODO : gestione titoli
-	.titleStmt, .titlestmt {
+	.titleStmt, .titlestmt, .titleStatement {
 		margin-bottom: 10px;
-		margin-left: 25%;
+		//margin-left: 25%;
 
 		.title {
 			display: inline;
