pagination for entities list and other stuff
Pagination for named entities lists. Update to search button labels to use translation keys. Minor stuff: fixes to method call in select.directive.js, minor style adjustments for scrollable lists. Txt to txt mode deactivated.

--- a/evt-viewer/app/styles/_list.scss
+++ b/evt-viewer/app/styles/_list.scss
@@ -53,4 +53,8 @@
 			overflow-y: scroll;
 			height: 100%;
 		}
+		.scrollableDiv.no-scroll {
+			overflow: visible !important;
+			height: auto !important;
+		}
 }
