--- a/evt-viewer/app/styles/main.scss
+++ b/evt-viewer/app/styles/main.scss
@@ -34,6 +34,28 @@ body {
     width: 100%;
     min-width: 800px;
 
+    // Global button styles - square buttons with site font
+    button {
+        font-family: Junicode, Times, serif;
+        font-size: 14px;
+        padding: 4px 10px;
+        border: 1px solid #999;
+        border-radius: 0;
+        background-color: #f5f5f5;
+        cursor: pointer;
+
+        &:hover:not(:disabled) {
+            background-color: #e8e8e8;
+            border-color: #666;
+        }
+
+        &:disabled {
+            opacity: 0.6;
+            cursor: not-allowed;
+            background-color: #e0e0e0;
+        }
+    }
+
     >header,
     >footer,
     >section {
@@ -53,6 +75,14 @@ body {
             height: 34px;
             float: left;
             margin-right: 1rem;
+        }
+
+        .quill-icon {
+            height: 34px;
+            width: 34px;
+            float: left;
+            margin-right: 0.5rem;
+            vertical-align: middle;
         }
 
         .webSiteLink {
